# veridactus

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADOPTERS.md  AI-1.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  TODO.md
.github/: CODEOWNERS  (+3 more)
core/: Cargo.toml  Dockerfile  README.md
core/benches/: journal_bench.rs
core/docs/: constraints-enhancement.md
core/src/: lib.rs  main.rs
core/src/agent_chain/: mod.rs
core/src/attestation/: hardware.rs  mod.rs  software_tee.rs
core/src/audit/: mod.rs  token.rs
core/src/auth/: keys.rs  mod.rs
core/src/budget/: cost_estimation.rs  mod.rs  stream_guard.rs
core/src/compliance/: hipaa_pci.rs  mod.rs
core/src/configsync/: client.rs  longpoll.rs  mod.rs
core/src/conformance/: jcs_consistency.rs  mod.rs  signature_verification.rs  test_runner.rs
core/src/constraints/: mod.rs
core/src/crypto/: jcs.rs  merkle.rs  mod.rs  signature.rs  utf8.rs  zk.rs
core/src/delegation/: mod.rs  validator.rs
core/src/diff/: mod.rs
core/src/dispatcher/: mod.rs  redis_dispatch.rs
core/src/fairness/: mod.rs
core/src/gdpr/: mod.rs
core/src/governance_dsl/: compiler.rs  mod.rs  parser.rs  validator.rs
core/src/guarantees/: mod.rs
core/src/hooks/: handlers.rs  mod.rs  registry.rs
core/src/http/: error_handler.rs  headers.rs  helpers.rs  mod.rs  openapi.rs  regex_registry.rs  server.rs  streaming.rs
core/src/keymanager/: manager.rs  mod.rs  resolver.rs
core/src/longrunning/: manager.rs  mod.rs
core/src/middleware/: mod.rs
core/src/observability/: metrics.rs  mod.rs  otel.rs  prometheus.rs
core/src/pipeline/: compiler.rs  config.rs  executor.rs  mod.rs
core/src/plugin/: governance.rs  guardrails.rs  mod.rs  output_filter.rs  pii_detector.rs  production_plugins.rs  semantic_guard.rs  sidecar.rs  wasm_runtime.rs
core/src/prevention/: mod.rs
core/src/privacy/: dp_budget.rs  masking.rs  mod.rs
core/src/redteam/: mod.rs
core/src/replay/: determinism.rs  engine.rs  mod.rs  upstream_cache.rs
core/tests/: e2e.rs  hooks_integration_test.rs  pipeline_executor_test.rs  store_adapters_test.rs  streaming_integration.rs
(+213 files in other folders)
